Added Update Vehicle

--- a/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
@@ -21,7 +21,7 @@
             <th>Status</th>
             <th>DaysInInventory</th>
             <th>Price</th>
-            <th>Condition</th>
+            <th>CarCondition</th>
             <th>SuggestedMSRP</th>
             <th>Mileage</th>
             <th>VehicleClass</th>
