--- a/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
@@ -15,7 +15,7 @@
         <th>Status</th>
         <th>DaysInInventory</th>
         <th>Price</th>
-        <th>Condition</th>
+        <th>CarCondition</th>
         <th>SuggestedMSRP</th>
         <th>Mileage</th>
         <th>VehicleClass</th>
@@ -42,7 +42,7 @@
 
 </table>
 <div style="display: block">
-    <a href="/Product/UpdateProduct/@Model.StockNumber">Update this Product</a>
+    <a href="/Vehicle/UpdateVehicle/@Model.StockNumber">Update this Product</a>
 </div>
 
 <div style="display: block">
