finished update vehicle method

--- a/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
@@ -37,7 +37,7 @@
         <td>@Model.SuggestedMSRP</td>
         <td>@Model.Mileage</td>
         <td>@Model.VehicleClass</td>
-        <td>@Model.DriveTrainID</td>
+        <td>@Model.DriveTrain</td>
     </tr>
 
 </table>
