--- a/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
@@ -49,7 +49,7 @@
     @using (Html.BeginForm("DeleteVehicle", "Vehicle", "Post"))
     {
         <input type="hidden" asp-for="StockNumber" value="@Model.StockNumber" />
-        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete Vehicle From Inventory" />
+        <input class="btn btn-outline-danger" type="submit" onclick="return confirm('Are you sure?')" value="Delete This Vehicle From Inventory" />
     }
 </div>
 
