Made some Changes to button Layouts

--- a/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
@@ -10,11 +10,11 @@
     </p>
 }
 <div style="display: block">
-    <a href="/Vehicle/InsertVehicle/">Insert a Vehicle into Inventory</a>
+    <a class="btn btn-primary" href="/Vehicle/InsertVehicle/">Insert a Vehicle into Inventory</a>
 </div>
 
 <table class="table table-hover table-striped">
-    <thead>
+    <thead class="table-dark">
         <tr class="text-center">
             <th>StockNumber</th>
             <th>VIN</th>
