--- a/FinalProject2ndAttempt/Views/Vehicle/InsertVehicle.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/InsertVehicle.cshtml
@@ -70,5 +70,5 @@
             }
         </select>
     </div>
-    <input type="submit" value="Insert Vehicle" class="btn btn-primary" />
+    <input type="submit" value="Insert Vehicle" class="btn btn-success" />
 }
