--- a/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/ViewVehicle.cshtml
@@ -42,7 +42,7 @@
 
 </table>
 <div style="display: block">
-    <a href="/Vehicle/UpdateVehicle/@Model.StockNumber">Update this Vehicle</a>
+    <a class="btn btn-outline-success" href="/Vehicle/UpdateVehicle/@Model.StockNumber">Update this Vehicle</a>
 </div>
 
 <div style="display: block">
