Inserted Many Vehicle in Database

--- a/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
+++ b/FinalProject2ndAttempt/Views/Vehicle/Index.cshtml
@@ -5,7 +5,7 @@
 @using (Html.BeginForm("Search", "Vehicle", FormMethod.Get))
 {
     <p>
-        Find Vehicle By Make or Year: @Html.TextBox("searchString")
+        Find Vehicle By Make or Year or Condition: @Html.TextBox("searchString")
         <input type="submit" value="Search" />
     </p>
 }
